Email validation and Analytics model import
